--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ const requestData = async function() {
     .scale( 10100)
     .fitSize([width, height], nyc)
 
+  var boroughColor
+
+
 
   const path = d3.geoPath(projection);
   console.log(path)
@@ -55,7 +58,34 @@ const requestData = async function() {
     .data( nyc.features )
     .enter()
     .append( "path" ) // before we used lines, now we are using a path allows path 
-    .attr( "fill", "#ccc" )
+    //.attr( "fill", "#ccc" )
+    .attr("fill", (function (d) { 
+    // Manhattan
+    if(parseInt(d.properties.ZIPCODE)<=10282 && parseInt(d.properties.ZIPCODE)>=10001)
+    
+    {return "red"}
+    // Staten Island
+    if(parseInt(d.properties.ZIPCODE)<=10314 && parseInt(d.properties.ZIPCODE)>=10301)
+    {return "yellow"}
+
+    // Bronx
+    if(parseInt(d.properties.ZIPCODE)<=10475 && parseInt(d.properties.ZIPCODE)>=10451)
+    {return "blue"}
+
+    // Brooklyn
+    if(parseInt(d.properties.ZIPCODE)<=11256 && parseInt(d.properties.ZIPCODE)>=11201)
+    {return "orange"}
+
+    // Queens
+    if(parseInt(d.properties.ZIPCODE)<=11109 && parseInt(d.properties.ZIPCODE)>=11004)
+    {return "purple"}
+
+    // Queens
+    if(parseInt(d.properties.ZIPCODE)<=11697 && parseInt(d.properties.ZIPCODE)>=11351)
+    {return "purple"}
+
+    else {return "lightgrey"}
+    } ))
     .attr( "stroke", "#333")
     .attr( "d", path );
   
