--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@ const requestData = async function() {
   console.log(path)
 
   // creating NYC neighborhood/borough map
-  var g = svg.append("g");
+  var viewport = map.append("g");
 
-  g.selectAll( "path" )
+  viewport.selectAll( "path" )
     .data( nyc.features )
     .enter()
     .append( "path" ) 
-    .attr( "fill", "#ccc" )
+    .attr("class","outline")
+    .style("stroke-width", 1)
     .style("opacity", ".9")
     .attr( "stroke", "#333")
     .attr("fill", (function (d) { 
@@ -87,21 +88,45 @@ const requestData = async function() {
     if(parseInt(d.properties.boro_cd)<=414 && parseInt(d.properties.boro_cd)>=401)
     {return "#E76F51"}
 
-
     else {return "lightgrey"}
     } ))
     .attr( "d", path );
 
-
-
-    svg.selectAll(".pin")
+  viewport.selectAll(".pin")
     .data(trees)
     .enter().append("circle")
+    .attr("class","circles")
     .attr("r",1 )
     .style("opacity", ".1")
     .attr("fill", "green")
     .attr("cx",function(d) { return projection([d["longitude"],d["latitude"]])[0];})
     .attr("cy",function(d) { return projection([d["longitude"],d["latitude"]])[1];});
+
+    var zoom = d3.zoom()
+                     .scaleExtent([1,10])
+                     .on("zoom", mapZoomed);
+    viewport.call(zoom);
+    function mapZoomed({transform}) {     
+      viewport.attr("transform", transform.toString());
+      viewport.selectAll(".outline")
+            .style("stroke-width", 1 / transform.k);
+      viewport.selectAll(".circles")
+            .style("r", radius(transform.k));
+      viewport.selectAll(".circles")
+            .style("opacity",  opa(transform.k));
+      }
+    
+    function radius(k) {
+      const rScale = d3.scaleLinear().domain([1, 10])
+          .range([1, 0.5]);
+      return rScale(k);
+    }
+
+    function opa(k) {
+      const rScale = d3.scaleLinear().domain([1, 10])
+          .range([0.1, 0.3]);
+      return rScale(k);
+    }
   
 };
 
