--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ requestData();
   const svg2 = d3.select("#nyc-scatterplot");
   const width2 = svg2.attr("width");
   const height2 = svg2.attr("height");
-  const margin2 = { top: 30, right: 50, bottom: 50, left:80};
+  const margin2 = { top: 30, right: 50, bottom: 100, left:80};
   const mapWidth2 = width2 - margin2.left - margin2.right;
   const mapHeight2 = height2 - margin2.top - margin2.bottom;
   const scatterPlot = svg2.append("g")
@@ -319,7 +319,27 @@ const requestData2 = async function() {
       .attr("dy", "1em")
       .style("text-anchor", "middle")
       .text("NYC Poverty rate");
-  
+  let boroughList = ['Bronx', 'Staten Island','Brooklyn','Queens','Manhattan']
+  svg2.selectAll("mydots")
+    .data(boroughList)
+    .enter()
+    .append("circle")
+    .attr("cx", 100)
+    .attr("cy", function(d,i){ return 620 + i*17}) // 100 is where the first dot appears. 25 is the distance between dots
+    .attr("r", 5)
+    .style("fill", function(d){ return colorScale(d)})
+  // console.log(colorExtent)
+// Add one dot in the legend for each name.
+  svg2.selectAll("mylabels")
+    .data(boroughList)
+    .enter()
+    .append("text")
+    .attr("x", 120)
+    .attr("y", function(d,i){ return 620 + i*17}) // 100 is where the first dot appears. 25 is the distance between dots
+    .style("fill", function(d){ return colorScale(d)})
+    .text(function(d){ return d})
+    .attr("text-anchor", "left")
+    .style("alignment-baseline", "middle")
 
 
 };//finish request data
