--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <style>
       body{
         font-family: "Open Sans";
+        background-color:lightyellow"
       }
       .tooltip {
         pointer-events: none;
@@ -21,14 +22,26 @@
       .tree {
         pointer-events: none;
       }
+      .flex-row{
+        display: flex;
+        flex-direction: row;
+      }
+ 
     </style>
 
 </head>
 <body>
-  <h3> Trees and Air Quality in an Urban World</h3>
-  <svg id="nyc-choropleth" height="700" width="1200" style="background-color:lightyellow"></svg>
-  <h3> Trees and Poverty Rate Scatter Plot</h3>
-  <svg id="nyc-scatterplot" height="700" width="1200" ></svg>
+ 
+  <div class="flex-row">
+    <h3> Trees and Air Quality in an Urban World</h3>
+    <div class ="plot">
+    <svg id="nyc-choropleth" height="600" width="800" ></svg>
+    </div>
+    <div class ="plot">
+    <h3> Trees and Poverty Rate Scatter Plot</h3>
+    <svg id="nyc-scatterplot" height="600" width="800" ></svg>
+    </div>
+  </div>
 </body>
 
 <script>
@@ -41,21 +54,21 @@
   const mapHeight = height - margin.top - margin.bottom;
   const map = svg.append("g").attr("transform","translate("+margin.left+","+margin.top+")");
 
-  let instructions = map.append("g").attr("transform", "translate(50, 20)");
+  // let instructions = map.append("g").attr("transform", "translate(50, 20)");
 
-  instructions.append("rect")
-            .attr("fill", "lightgreen")
-            .attr("class", "instructions")
-            .attr("width", 350)
-            .attr("height", 200);
+  // instructions.append("rect")
+  //           .attr("fill", "lightgreen")
+  //           .attr("class", "instructions")
+  //           .attr("width", 350)
+  //           .attr("height", 200);
   
-  instructions.append("text")
-              .attr("alignment-baseline","hanging")
-              .attr("x", 100)
-              .attr("y", 20)
-              .text("Instruction Block:");
+  // instructions.append("text")
+  //             .attr("alignment-baseline","hanging")
+  //             .attr("x", 100)
+  //             .attr("y", 20)
+              //.text("Instruction Block:");
 
-  let legend = map.append("g").attr("transform", "translate(50, 250)");
+  // let legend = map.append("g").attr("transform", "translate(50, 250)");
 
   const requestData = async function() {
     // Import data sets
@@ -75,7 +88,7 @@
     airExtent = d3.extent(air, d => Number(d['particle_concentration']));
     let airColorScale = d3.scaleLinear()
                           .domain(airExtent)
-                          .range(['lightblue','darkred']);
+                          .range(['yellow','red']);
         
     // Create NYC map
     var projection = d3.geoAlbers().fitSize([mapWidth, mapHeight], nyc)
@@ -83,6 +96,19 @@
 
     var viewport = map.append("g");
 
+    // diagonal patch pattern for undefined
+
+    svg
+      .append('defs')
+      .append('pattern')
+        .attr('id', 'diagonalHatch')
+        .attr('patternUnits', 'userSpaceOnUse')
+        .attr('width', 4)
+        .attr('height', 4)
+      .append('path')
+        .attr('d', 'M-1,1 l2,-2 M0,4 l4,-4 M3,5 l2,-2')
+        .attr('stroke', 'black')
+        .attr('stroke-width', 1);
     var communities = viewport.selectAll("path.community")
       .data( nyc.features )
       .join("path")
@@ -103,7 +129,7 @@
             parseInt(d.properties.boro_cd)<=414 && parseInt(d.properties.boro_cd)>=401) 
               return airColorScale(AirDict[d.properties.boro_cd])
     
-          else return "black"
+          else return "url(#diagonalHatch)"
       })
       .on('mouseover',  mouseEntersCommunity )
       .on('mouseout',  mouseLeavesCommunity );
