--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
 
 
 <script>
+  
   const svg2 = d3.select("#nyc-scatterplot");
   const width2 = svg2.attr("width");
   const height2 = svg2.attr("height");
@@ -338,6 +339,7 @@
                           .domain(colorExtent)//give it all the data not just extent to binning
                           .range(colorArray)
     // data point
+    
     Object.keys(blockPopulation).forEach((d,i)=>
     {
       if(blockTreeNum[d]!=undefined){
@@ -366,7 +368,7 @@
         .style("text-anchor", "middle")
         .text("NYC Poverty rate");
     let boroughList = ['Bronx', 'Staten Island','Brooklyn','Queens','Manhattan']
-    svg2.selectAll("mydots")
+    svg2.append("g").selectAll("mydots")
       .data(boroughList)
       .enter()
       .append("circle")
@@ -375,6 +377,26 @@
       .attr("r", 5)
       .style("fill", function(d){ return colorScale(d)})
     // console.log(colorExtent)
+
+    var plotZoom = d3.zoom().scaleExtent([1,3]).on("zoom", plotZoomed);
+    
+    svg2.call(plotZoom);
+
+    function plotZoomed(event) {    
+
+      //svg2.attr("transform", event.transform);
+      //cannot access circles
+
+      leftAxis.scale(event.transform.rescaleY(popScale))
+      bottomAxis.scale(event.transform.rescaleX(treeScale))
+      leftGridlines.scale(event.transform.rescaleY(popScale))
+      bottomGridlines.scale(event.transform.rescaleX(treeScale))
+
+      d3.select("g.y.axis").call(leftAxis);
+      d3.select("g.x.axis").call(bottomAxis);
+      d3.select("g.y.gridlines").call(leftGridlines);
+      d3.select("g.x.gridlines").call(bottomGridlines);
+    }
 
     // Add one dot in the legend for each name.
     svg2.selectAll("mylabels")
@@ -387,6 +409,7 @@
       .text(function(d){ return d})
       .attr("text-anchor", "left")
       .style("alignment-baseline", "middle")
+
   };
   requestData2();
 
