--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   <div class="flex-row">
     <div>
       <h3> Trees and Air Quality in an Urban World</h3>
+      <p> Graph 1: A Map of NY with the distribution of trees. Each green circle of the map represents an individual tree. 
+          The map is colored accorrding to the air particles in the corresponding community district. The legend above shows
+          The scale for coloring. Hover, zoom and pan on the map to find out more information about each districts.
+      </p>
       <div class ="plot">
         <svg id="nyc-choropleth" height="600" width="800" ></svg>
         <h5> Air Quality Scale</h5>
@@ -44,6 +48,9 @@
     <div>
       <div class ="plot">
         <h3> Trees and Poverty Rate Scatter Plot</h3>
+        <p> Graph 2: A scatterplot of NY communities with X axis as its count of trees and Y axis as its poverty rate, the
+            circles are colored by their borough. Zoom and pan on the map to see the circle's precise points on the plot.
+        </p>
         <svg id="nyc-scatterplot" height="600" width="800" ></svg>
       </div>
     </div>
